staging/src/k8s.io/api/testdata/v1.21.0/extensions.v1beta1.Ingress.json
{
  "kind": "Ingress",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "2",
    "generateName": "3",
    "namespace": "4",
    "selfLink": "5",
    "uid": "7",
    "resourceVersion": "11042405498087606203",
    "generation": 8071137005907523419,
    "creationTimestamp": null,
    "deletionGracePeriodSeconds": -4955867275792137171,
    "labels": {
      "7": "8"
    },
    "annotations": {
      "9": "10"
    },
    "ownerReferences": [
      {
        "apiVersion": "11",
        "kind": "12",
        "name": "13",
        "uid": "Dz廔ȇ{sŊƏp",
        "controller": false,
        "blockOwnerDeletion": true
      }
    ],
    "finalizers": [
      "14"
    ],
    "clusterName": "15",
    "managedFields": [
      {
        "manager": "16",
        "operation": "鐊唊飙Ş-U圴÷a/ɔ}摁(湗Ć]",
        "apiVersion": "17",
        "fieldsType": "18"
      }
    ]
  },
  "spec": {
    "ingressClassName": "19",
    "backend": {
      "serviceName": "20",
      "servicePort": "21",
      "resource": {
        "apiGroup": "22",
        "kind": "23",
        "name": "24"
      }
    },
    "tls": [
      {
        "hosts": [
          "25"
        ],
        "secretName": "26"
      }
    ],
    "rules": [
      {
        "host": "27",
        "http": {
          "paths": [
            {
              "path": "28",
              "pathType": ")晿\u003co,c鮽ort昍řČ",
              "backend": {
                "serviceName": "29",
                "servicePort": 1973774989,
                "resource": {
                  "apiGroup": "30",
                  "kind": "31",
                  "name": "32"
                }
              }
            }
          ]
        }
      }
    ]
  },
  "status": {
    "loadBalancer": {
      "ingress": [
        {
          "ip": "33",
          "hostname": "34",
          "ports": [
            {
              "port": 2114329341,
              "protocol": "Ă凗蓏Ŋ蛊ĉy",
              "error": "35"
            }
          ]
        }
      ]
    }
  }
}
